--- a/DEW/UT04-01/index.html
+++ b/DEW/UT04-01/index.html
@@ -56,7 +56,7 @@
                 <div class="form-column2" >
                     <label for="document-type">DNI/NIE</label>
                     <select id="document-type" name="document-type">
-                        <option value="none" selected>---</option>
+                        <option value="none" disabled selected>---</option>
                         <option value="dni">DNI</option>
                         <option value="nie">NIE</option>
                     </select>
